# etu_parser

./: Makefile  docker-compose.yaml
bot/: Dockerfile  pyproject.toml
bot/docker/: run.sh
bot/src/: config.py  create_bot.py  main.py
bot/src/checker/: models.py  router.py  utils.py
