[project]
name = "etu-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "kotafan1rich",email = "lesapond2007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
